--- a/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
@@ -29,10 +29,18 @@
             @(IsDateFiltered ? "mdi-filter-check-outline" : "mdi-filter-outline")
         </MIcon>
     </MButton>
+
+    <MButton Icon="true"
+             OnClick="()=>ShowDiarySort=true">
+        <MIcon>
+            mdi-sort-variant
+        </MIcon>
+    </MButton>
 </MyAppBar>
 
 <ScrollContainer>
     <DiaryCardList @bind-Tags="Tags"
+                   @bind-ShowSort="ShowDiarySort"
                    Value="Diaries"
                    NotFoundText="@(IsSearchFiltered ? I18n.T("Search.Not Found"):null)" />
 </ScrollContainer>
