--- a/SwashbucklerDiary/Pages/History/HistoryPage.razor
+++ b/SwashbucklerDiary/Pages/History/HistoryPage.razor
@@ -25,10 +25,18 @@
     }
 
     <MSpacer></MSpacer>
+
     <MButton Icon="true"
              OnClick="ExportThisTime">
         <MIcon>
             mdi-export
+        </MIcon>
+    </MButton>
+
+    <MButton Icon="true"
+             OnClick="()=>ShowDiarySort=true">
+        <MIcon>
+            mdi-sort-variant
         </MIcon>
     </MButton>
 </MyAppBar>
@@ -49,6 +57,7 @@
     </IntersectElement>
 
     <DiaryCardList @bind-Tags="Tags"
+                   @bind-ShowSort="ShowDiarySort"
                    Value="PickedDiaries"
                    OnRemove="HandelOnRemove">
     </DiaryCardList>
