♻️ refactor(MyTextarea): Use separate components instead of extensions

--- a/SwashbucklerDiary/Pages/Write/WritePage.razor
+++ b/SwashbucklerDiary/Pages/Write/WritePage.razor
@@ -122,17 +122,10 @@
         }
         else
         {
-            <MTextareaExtension @ref="MTextareaExtension"
-                                @bind-Value="Diary.Content"
-                                Class="@($"my-sm-4 user-select rounded-lg flex-grow-1 flex-column {(EnableMarkdown?"d-none":"")}")"
-                                Solo="Mobile"
-                                Flat="Mobile"
-                                Outlined="Desktop"
-                                HideDetails="@("auto")"
-                                NoResize="true"
-                                spellcheck="false"
-                                Placeholder="@(I18n.T("Write.ContentPlace"))">
-            </MTextareaExtension>
+            <MyTextarea @ref="MyTextarea"
+                         @bind-Value="Diary.Content"
+                         Class="my-sm-4 rounded-lg">
+            </MyTextarea>
         }
     </div>
 
