🔥 chore: arrange code

--- a/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/LogPage.razor
@@ -78,6 +78,6 @@
 </DeleteDialog>
 
 <MultiListDialog @bind-Value="ShowShare"
-                 Title="Share.SelectShare"
+                 Title="@(I18n.T("Share.SelectShare"))"
                  DynamicListItems="ShareItems">
 </MultiListDialog>
