--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -141,7 +141,7 @@
 </ScrollContainer>
 
 <MultiListDialog @bind-Value="ShowShare"
-                 Title="Share.SelectShare"
+                 Title="@(I18n.T("Share.SelectShare"))"
                  DynamicListItems="ShareItems">
 </MultiListDialog>
 
