🐛 fix: Screenshot dont contain image

--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -106,7 +106,7 @@
                         maxlength="20">
             </MTextField>
         }
-        @if (Markdown)
+        @if (EnableMarkdown)
         {
             <MarkdownPreview Value="@(Diary.Content)"
                              Class="my-sm-4 px-3"
