🆕 feat: add Filing number

--- a/SwashbucklerDiary/Pages/Mine/About/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/AboutPage.razor
@@ -24,8 +24,13 @@
                     <MListItemSubtitle Class="mb-2">
                         version @AppVersion
                     </MListItemSubtitle>
-                    <MListItemSubtitle>
+                    <MListItemSubtitle Class="mb-2">
                         @(I18n.T("About.Introduction"))
+                    </MListItemSubtitle>
+                    <MListItemSubtitle>
+                        <a href="https://beian.miit.gov.cn/" class="text--disabled text-decoration-none" style="font-size:0.75rem;">
+                            @(I18n.T("About.Filing number"))辽ICP备2023009191号-2A
+                        </a>
                     </MListItemSubtitle>
                 </MListItemContent>
             </MListItem>
