--- a/SwashbucklerDiary/Pages/Mine/MinePage.razor
+++ b/SwashbucklerDiary/Pages/Mine/MinePage.razor
@@ -28,7 +28,9 @@
                                          Rounded="@("lg")"
                                          Size="70"
                                          @onclick:stopPropagation="true">
-                            <MImage Src="@(Avatar)" @onclick="()=>ShowPreviewImage=true">
+                            <MImageExtension Src=""
+                                             MySrc="@(Avatar)"
+                                             @onclick="()=>ShowPreviewImage=true">
                                 <PlaceholderContent>
                                     <MRow Class="fill-height ma-0"
                                           Align="@AlignTypes.Center"
@@ -37,7 +39,7 @@
                                         </MProgressCircular>
                                     </MRow>
                                 </PlaceholderContent>
-                            </MImage>
+                            </MImageExtension>
                         </MListItemAvatar>
                         <MListItemContent>
                             <MListItemTitle Class="text-h6 font-weight-bold">
