--- a/SwashbucklerDiary/Components/MyComponents/ImageResourceCard/ImageResourceCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ImageResourceCard/ImageResourceCard.razor
@@ -5,8 +5,7 @@
        Rounded="@("lg")"
        Ripple="false"
        OnClick="PreviewImage">
-    <MImageExtension Src=""
-                     MySrc="@Src">
+    <MImage Src="@Src">
         <PlaceholderContent>
             <MRow Class="fill-height ma-0"
                   Align="@AlignTypes.Center"
@@ -15,5 +14,5 @@
                 </MProgressCircular>
             </MRow>
         </PlaceholderContent>
-    </MImageExtension>
+    </MImage>
 </MCard>
