--- a/SwashbucklerDiary/Pages/Mine/UserPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/UserPage.razor
@@ -24,8 +24,7 @@
                 <MListItemAction>
                     <MAvatar Rounded="@("lg")"
                              Size="32">
-                        <MImageExtension Src=""
-                                         MySrc="@Avatar">
+                        <MImage Src="@Avatar">
                             <PlaceholderContent>
                                 <MRow Class="fill-height ma-0"
                                       Align="@AlignTypes.Center"
@@ -33,7 +32,7 @@
                                     <MProgressCircular Indeterminate></MProgressCircular>
                                  </MRow>
                              </PlaceholderContent>
-                         </MImageExtension>
+                         </MImage>
                      </MAvatar>
                      <MIcon>mdi-chevron-right</MIcon>
                  </MListItemAction>
