--- a/src/SwashbucklerDiary.WebAssembly/App.razor
+++ b/src/SwashbucklerDiary.WebAssembly/App.razor
@@ -1,5 +1,6 @@
 ﻿<Router AppAssembly="@typeof(MainLayout).Assembly" AdditionalAssemblies="[typeof(App).Assembly]">
     <Found Context="routeData">
+        <PageTitle>@(I18n.T("AppName"))</PageTitle>
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
